--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -53,12 +53,29 @@
     <ClInclude Include="source\third_party\xml\pugixml.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ressource\json\header\header_attribute.json" />
+    <None Include="ressource\json\header\header_define.json" />
+    <None Include="ressource\json\header\header_item.json" />
+    <None Include="ressource\json\header\header_itemkind.json" />
+    <None Include="ressource\json\header\header_job.json" />
+    <None Include="ressource\json\header\header_neuz.json" />
+    <None Include="ressource\json\header\header_obj.json" />
+    <None Include="ressource\json\header\header_skill.json" />
+    <None Include="ressource\json\header\header_sound.json" />
+    <None Include="ressource\json\header\header_world.json" />
+    <None Include="ressource\json\prop\propCtrl.json" />
     <None Include="ressource\json\prop\propItem.json" />
+    <None Include="ressource\json\prop\propKarma.json" />
     <None Include="ressource\json\prop\propMoverEx.json" />
     <None Include="ressource\json\prop\propMoverExAI.json" />
     <None Include="ressource\json\prop\propQuest.json" />
     <None Include="ressource\json\prop\propSkill.json" />
     <None Include="ressource\json\prop\randomEventMonster.json" />
+    <None Include="ressource\json\text\text_ctrl.json" />
+    <None Include="ressource\json\text\text_item.json" />
+    <None Include="ressource\json\text\text_karma.json" />
+    <None Include="ressource\json\text\text_mover.json" />
+    <None Include="ressource\json\text\text_troupeskill.json" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ressource\xml\prop\mdlobj.xml" />
