--- a/FlyffRessource.vcxproj
+++ b/FlyffRessource.vcxproj
@@ -91,7 +91,8 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{8A745F1A-17FB-48A8-B9FB-B7B286B8AEFC}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>FlyffRessource</ProjectName>
   </PropertyGroup>
@@ -214,7 +215,7 @@
       <PreprocessorDefinitions>NDEBUG;FLYFFENGINE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>source/;source/property/;source/project/;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>source/;source/property/;source/project/;source/io/file/</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
