--- a/samples/Properties/Properties.vcxproj.filters
+++ b/samples/Properties/Properties.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="sample_propkarma.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="sample_text.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
