chargemement des fichier txt txt et h via le fichier project.json

--- a/FlyffRessource.vcxproj
+++ b/FlyffRessource.vcxproj
@@ -56,14 +56,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ressource\json\header\header_attribute.json" />
+    <None Include="ressource\json\header\header_continent.json" />
     <None Include="ressource\json\header\header_define.json" />
+    <None Include="ressource\json\header\header_event.json" />
+    <None Include="ressource\json\header\header_honor.json" />
     <None Include="ressource\json\header\header_item.json" />
     <None Include="ressource\json\header\header_itemkind.json" />
+    <None Include="ressource\json\header\header_item_kind.json" />
     <None Include="ressource\json\header\header_job.json" />
+    <None Include="ressource\json\header\header_lang.json" />
+    <None Include="ressource\json\header\header_lord_skill.json" />
+    <None Include="ressource\json\header\header_msghdr.json" />
     <None Include="ressource\json\header\header_neuz.json" />
     <None Include="ressource\json\header\header_obj.json" />
+    <None Include="ressource\json\header\header_quest.json" />
+    <None Include="ressource\json\header\header_resdata.json" />
     <None Include="ressource\json\header\header_skill.json" />
     <None Include="ressource\json\header\header_sound.json" />
+    <None Include="ressource\json\header\header_wnd_style.json" />
     <None Include="ressource\json\header\header_world.json" />
     <None Include="ressource\json\prop\propCtrl.json" />
     <None Include="ressource\json\prop\propItem.json" />
@@ -73,11 +83,73 @@
     <None Include="ressource\json\prop\propQuest.json" />
     <None Include="ressource\json\prop\propSkill.json" />
     <None Include="ressource\json\prop\randomEventMonster.json" />
+    <None Include="ressource\json\text\text_character.json" />
+    <None Include="ressource\json\text\text_character_etc.json" />
+    <None Include="ressource\json\text\text_character_school.json" />
     <None Include="ressource\json\text\text_ctrl.json" />
+    <None Include="ressource\json\text\text_dubear.json" />
+    <None Include="ressource\json\text\text_dudadk.json" />
+    <None Include="ressource\json\text\text_dudreadfulcave.json" />
+    <None Include="ressource\json\text\text_duflmas.json" />
+    <None Include="ressource\json\text\text_dukrr.json" />
+    <None Include="ressource\json\text\text_dumuscle.json" />
+    <None Include="ressource\json\text\text_duominous.json" />
+    <None Include="ressource\json\text\text_duominous_1.json" />
+    <None Include="ressource\json\text\text_durustia.json" />
+    <None Include="ressource\json\text\text_durustia_1.json" />
+    <None Include="ressource\json\text\text_dusatemple.json" />
+    <None Include="ressource\json\text\text_dusatempleboss.json" />
+    <None Include="ressource\json\text\text_etc.json" />
+    <None Include="ressource\json\text\text_faq.json" />
+    <None Include="ressource\json\text\text_gameguard.json" />
+    <None Include="ressource\json\text\text_guide.json" />
+    <None Include="ressource\json\text\text_help.json" />
+    <None Include="ressource\json\text\text_honorlist.json" />
+    <None Include="ressource\json\text\text_instanthelp.json" />
     <None Include="ressource\json\text\text_item.json" />
     <None Include="ressource\json\text\text_karma.json" />
+    <None Include="ressource\json\text\text_lordskill.json" />
+    <None Include="ressource\json\text\text_minigame_alphabet.json" />
     <None Include="ressource\json\text\text_mover.json" />
+    <None Include="ressource\json\text\text_patchclient.json" />
+    <None Include="ressource\json\text\text_patroldestination.json" />
+    <None Include="ressource\json\text\text_propitemetc.json" />
+    <None Include="ressource\json\text\text_propmotion.json" />
+    <None Include="ressource\json\text\text_propquest.json" />
+    <None Include="ressource\json\text\text_propquest_dungeonandpk.json" />
+    <None Include="ressource\json\text\text_propquest_requestbox.json" />
+    <None Include="ressource\json\text\text_propquest_requestbox2.json" />
+    <None Include="ressource\json\text\text_propquest_scenario.json" />
+    <None Include="ressource\json\text\text_questdestination.json" />
+    <None Include="ressource\json\text\text_resdata.json" />
+    <None Include="ressource\json\text\text_skill.json" />
+    <None Include="ressource\json\text\text_textclient.json" />
+    <None Include="ressource\json\text\text_textemotion.json" />
+    <None Include="ressource\json\text\text_tip.json" />
+    <None Include="ressource\json\text\text_treehelp.json" />
     <None Include="ressource\json\text\text_troupeskill.json" />
+    <None Include="ressource\json\text\text_tutorial.json" />
+    <None Include="ressource\json\text\text_wdarena.json" />
+    <None Include="ressource\json\text\text_wdguildhouselarge.json" />
+    <None Include="ressource\json\text\text_wdguildhousemiddle.json" />
+    <None Include="ressource\json\text\text_wdguildhousesmall.json" />
+    <None Include="ressource\json\text\text_wdguildwar.json" />
+    <None Include="ressource\json\text\text_wdguildwar1to1.json" />
+    <None Include="ressource\json\text\text_wdheaven01.json" />
+    <None Include="ressource\json\text\text_wdheaven02.json" />
+    <None Include="ressource\json\text\text_wdheaven03.json" />
+    <None Include="ressource\json\text\text_wdheaven04.json" />
+    <None Include="ressource\json\text\text_wdheaven05.json" />
+    <None Include="ressource\json\text\text_wdheaven06.json" />
+    <None Include="ressource\json\text\text_wdheaven06_1.json" />
+    <None Include="ressource\json\text\text_wdkebaras.json" />
+    <None Include="ressource\json\text\text_wdmadrigal.json" />
+    <None Include="ressource\json\text\text_wdminiroom.json" />
+    <None Include="ressource\json\text\text_wdquiz.json" />
+    <None Include="ressource\json\text\text_wdvolcane.json" />
+    <None Include="ressource\json\text\text_wdvolcanered.json" />
+    <None Include="ressource\json\text\text_wdvolcaneyellow.json" />
+    <None Include="ressource\json\text\text_world.json" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="ressource\xml\prop\mdlobj.xml" />
