--- a/FlyffRessource.vcxproj
+++ b/FlyffRessource.vcxproj
@@ -34,7 +34,7 @@
     <ClCompile Include="source\project\project_manager.cpp" />
     <ClCompile Include="source\property\property_manager.cpp" />
     <ClCompile Include="source\third_party\xml\pugixml.cpp" />
-    <ClCompile Include="source\world\world.cpp" />
+    <ClCompile Include="source\world\world_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\framework.h" />
@@ -56,10 +56,13 @@
     <ClInclude Include="source\third_party\json\picojson.h" />
     <ClInclude Include="source\third_party\xml\pugiconfig.h" />
     <ClInclude Include="source\third_party\xml\pugixml.h" />
+    <ClInclude Include="source\util\rect.hpp" />
     <ClInclude Include="source\util\vector.hpp" />
+    <ClInclude Include="source\world\landscape.hpp" />
     <ClInclude Include="source\world\respawn.hpp" />
     <ClInclude Include="source\world\world.h" />
     <ClInclude Include="source\world\world.hpp" />
+    <ClInclude Include="source\world\world_manager.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ressource\json\header\header_attribute.json" />
@@ -244,6 +247,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>source/;source/property/;source/project/;source/io/file/;source/world/</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
